# Vaccum-Robot-LDS02RR

./: .gitignore  build_and_sync.sh  dc_motor.ino  fix_setup_bash.sh  log_test.txt  test_client_improved.html  toolchain_aarch64.cmake  xiao_ble_i2c.ino  xiao_i2c_pid.ino  xiao_pid.ino  xiao_test.ino
FrontierExploration/: my_map.yaml  test_client.html
FrontierExploration/autonomous_exploration/: requirements.txt  run_visualizer.sh  setup.py
FrontierExploration/autonomous_exploration/autonomous_exploration/: control.py  demo_smart_cleaning.py  rviz_gui.py  smart_cleaning_algorithm.py  vacuum_algorithms.py
ROS2Visualizer/: settings.gradle.kts
ROS2Visualizer/app/: build.gradle.kts
ROS2Visualizer/gradle/wrapper/: gradle-wrapper.properties
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/lib/lds02rr_lidar/: lds02rr_node
install/lib/turtlebot3_bringup/: web_bridge_pi.py
install/share/autonomous_exploration/: package.dsv  package.ps1  package.sh
install/share/explorer_bringup/: explorer.launch.py  package.dsv  package.ps1  package.sh
install/share/explorer_interfaces/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/explorer_wanderer/: package.dsv  package.ps1  package.sh
install/share/lds02rr_lidar/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/turtlebot3/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/turtlebot3_bringup/: package.dsv  package.ps1  package.sh
install/share/turtlebot3_cartographer/: local_setup.sh  package.sh
install/share/turtlebot3_description/: local_setup.sh  package.sh
install/share/turtlebot3_example/: package.dsv  package.ps1  package.sh
install/share/turtlebot3_navigation2/: package.sh
install/share/turtlebot3_node/: local_setup.sh  package.dsv  package.ps1  package.sh
log/: latest_build
src/turtlebot3/lds02rr_lidar/: CMakeLists.txt  README.md  package.xml
src/turtlebot3/lds02rr_lidar/include/xv_11_driver/: xv11_laser.h
src/turtlebot3/lds02rr_lidar/launch/: lds02rr.launch.py
src/turtlebot3/lds02rr_lidar/src/: xv11_laser.cpp  xv_11_driver.cpp
xiao_pid/: xiao_pid.ino
(+109 files in other folders)
